--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -9,11 +9,16 @@
 
 body {
   background: $midnight;
+  font-family: $serif;
 }
 
 .layout-container {
+  @include container();
+  margin-left: gutter(2);
+  margin-right: gutter(2);
   background: #FFF;
-  margin-top: 20px;
+  margin-top: 12px;
   padding: 20px;
   border-radius: 3px;
+  border: 1px solid $midnight;
 }
