--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -17,6 +17,8 @@
   "base/vars",
   "base/base";
 
+// @import "https://fonts.googleapis.com/css?family=Merriweather";
+
 // // Base
 // @import
 //   "base/functions",
