Theme-work, begining input and form styles, adjusting colors of layout elements for improved readability

--- a/assets/sass/base/_vars.scss
+++ b/assets/sass/base/_vars.scss
@@ -42,3 +42,10 @@ $susy: (
   output: float,
   gutter-position: inside,
 );
+
+
+// Layout
+// ==========================================================================
+
+$wide:      1280px;
+
