--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -15,7 +15,8 @@
 // Vars
 @import
   "base/vars",
-  "base/base";
+  "base/base",
+  "base/mixins";
 
 // @import "https://fonts.googleapis.com/css?family=Merriweather";
 
