--- a/assets/sass/components/_forms.scss
+++ b/assets/sass/components/_forms.scss
@@ -10,5 +10,32 @@
 .form-item {
   label {
     font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: $midnight;
   }
-}
+  
+  input,
+  textarea,
+  select {
+    @include boxy();
+    padding: 6px 12px 6px 8px;
+    background: #FFF;
+  }
+
+  input {} // Input
+  
+  .form-textarea-wrapper {}
+  
+  textarea {} // textarea
+
+  .form-required:after {
+    width: 8px;
+    height: 8px;
+    background-size: 100%;
+  }
+} // .form-item
+
+
+
+
