Theme - Font changes, button and dropdown work, mixins and layout updates

--- a/assets/sass/base/_vars.scss
+++ b/assets/sass/base/_vars.scss
@@ -28,7 +28,8 @@ $azure:         #3aa2fc;    // Accompanying $cobalt
 // Type
 // ==========================================================================
 
-$serif: 'Merriweather', serif;
+$serif: 'PT Serif', serif;
+$sans: 'Open Sans', sans-serif;
 
 
 // Susy
