--- a/assets/sass/base/_mixins.scss
+++ b/assets/sass/base/_mixins.scss
@@ -9,3 +9,13 @@
   border-radius: 3px;
   box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+/// Apply the theme's basic box-shadow and border styles
+@mixin button($color: $cobalt) {
+  border: 1px solid $azure;
+  background: $color;
+  border-radius: 3px;
+  padding: 6px 8px;
+  color: #FFF;
+  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.25);
+}
