--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -38,8 +38,8 @@
 @import
   "components/forms",
   "components/dropbutton",
-  "components/views";
-//   "components/tabs",
+  "components/views",
+  "components/tabs";
 //   "components/messages",
 //   "components/search-form",
 //   "components/blocks",
