Theme - Numerous changes

--- a/assets/sass/base/_vars.scss
+++ b/assets/sass/base/_vars.scss
@@ -23,6 +23,9 @@ $grass:         #4d882a;    // Slightly muted hilight
 $lime:          #76bc4c;    // Accompanying $grass
 $cobalt:        #247dcb;    // Slightly muted hilight
 $azure:         #3aa2fc;    // Accompanying $cobalt
+$heart:         #bf363f;    // Darker Red to accommodate $berry
+$berry:         #ef434f;    // Lighter Red to accommodate $heart
+
 
 
 // Type
