--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -37,17 +37,18 @@
 
 // Components
 @import
+  "components/buttons",
   "components/forms",
   "components/dropbutton",
   "components/views",
   "components/tabs",
-  "components/messages";
+  "components/messages",
+  "components/vertical-tabs";
 //   "components/search-form",
 //   "components/blocks",
 //   "components/article",
 //   "components/hero",
 //   "components/slices",
-//   "components/buttons",
 //   "components/project",
 //   "components/person",
 //   "components/calling-card",
