--- a/assets/sass/base/_vars.scss
+++ b/assets/sass/base/_vars.scss
@@ -15,16 +15,25 @@
 $charcoal:      #21272b;    // Rarely used, mostly for accents to $midnight el's
 $midnight:      #333d44;    // Considered "darkest background"
 $fjord:         #475765;    // Accompanying shade to $midnight
+
 $crystal:       #c2d2dd;    // Pleasant light share, can be bg
 $glass:         #e1ebf2;    // Accompanying shade to $crystal, hilight
+
 $lava:          #ad4000;    // Slightly muted hilight
 $orange:        #e15300;    // Accompanying $lava
+
 $grass:         #4d882a;    // Slightly muted hilight
 $lime:          #76bc4c;    // Accompanying $grass
+
 $cobalt:        #247dcb;    // Slightly muted hilight
 $azure:         #3aa2fc;    // Accompanying $cobalt
+
 $heart:         #bf363f;    // Darker Red to accommodate $berry
 $berry:         #ef434f;    // Lighter Red to accommodate $heart
+
+
+$lime-light:      lighten($lime, 40%);
+$grass-light:     lighten($grass, 55%);
 
 
 
@@ -52,4 +61,13 @@ $susy: (
 // ==========================================================================
 
 $wide:      1280px;
+
+
+// Transitions
+// ==========================================================================
+
+$trans-fast:      all 75ms ease-in-out;
+$trans-med:       all 100ms ease-in-out;
+$trans-slow:      all 150ms ease-in-out;
+
 
