--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -2,3 +2,25 @@
   Button Elements
   ==========================================================================
 */
+
+#edit-submit {
+  padding: 12px 36px;
+  background: $azure;
+  color: #FFF;
+  border: 1px solid $cobalt;
+  border-radius: 3px;
+  box-shadow: inset 0 0 12px rgba(255, 255, 255, 0.66), 0 2px 0 rgba(0, 0, 0, 0.33);
+  transition: $trans-med;
+
+  &:hover {
+    box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.75), 0 2px 0 rgba(0, 0, 0, 0.33);
+  }
+
+  &:focus,
+  &:active {
+    position: relative;
+    margin-top: 2px;
+    box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.85);
+    outline: none;
+  }
+}
