--- a/assets/sass/components/_messages.scss
+++ b/assets/sass/components/_messages.scss
@@ -8,6 +8,7 @@
 */
 
 div[role=contentinfo].messages {
+  margin: 24px 0;
 
   &.messages--error {
     background-color: rgba(239, 67, 79, 0.075); // $berry
@@ -15,8 +16,19 @@ div[role=contentinfo].messages {
   }
 
   &.messages--status {
-    background-color: rgba(117, 192, 61, 0.075); // $lime
-    border-color: $grass;
+    // background-color: rgba(117, 192, 61, 0.075); // $lime
+    background: repeating-linear-gradient(
+      45deg,
+      $lime-light,
+      $lime-light 10px,
+      $grass-light 10px,
+      $grass-light 20px
+    );
+    color: $grass;
+    border: 1px solid $grass;
+    border-left: 8px solid $grass;
+    // box-shadow: inset 0 0 30px $grass-light, 0 2px 0 rgba(0, 0, 0, 0.15), 0 1px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
   }
 }
 
