--- a/assets/sass/components/_tabs.scss
+++ b/assets/sass/components/_tabs.scss
@@ -9,7 +9,7 @@
 
 nav.tabs {
   margin-bottom: 24px;
-  border-bottom: 1px solid $glass;
+  border-bottom: 1px solid $cobalt;
 
   ul.primary {
     margin: 0;
@@ -17,9 +17,17 @@ nav.tabs {
 
     li {
       background: $glass;
+      border-top-left-radius: 3px;
+      border-top-right-radius: 3px;
+
+      a {
+        color: $cobalt;
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+      }
 
       &.is-active a {
-        background: $azure;
+        background: $cobalt;
         color: #FFF;
       }
     } // li
