--- a/assets/sass/components/_views.scss
+++ b/assets/sass/components/_views.scss
@@ -9,12 +9,34 @@
 
 .view-id-content {
 
-  td {
-    border: dotted 1px tomato;
-  }
+  // Header Components
+  .view-filters {
 
+  }  // View-Filters
+
+  // Meat & Potatoes
   .views-table {
     width: 100%;
+
+    thead {
+      background: rgba(0, 0, 0, 0.025);
+      border-bottom: 1px solid #CFCFCF;
+    }
+
+    thead th {
+      padding: 8px;
+    }
+
+    tbody>tr:nth-child(2n) {
+      background-color: rgba(0, 0, 0, 0.025);
+    }
+
+    td {
+      padding: 8px;
+      &.is-active {
+        background-color: rgba(0, 0, 0, 0.033);
+      }
+    }
 
     // table-level:
     tr td:first-child,
@@ -26,19 +48,10 @@
       background: $glass;
     }
 
-    td.is-active {
-      background: $glass;
-    }
-
-    td.views-field-node-bulk-form {
-      width: 14px;
-    }
-
     // table-child-elements:
     .form-type-checkbox {
       margin: 1em;
     }
-
-  }
+  } // Views-Table
 
 }
