--- a/assets/sass/base/_mixins.scss
+++ b/assets/sass/base/_mixins.scss
@@ -10,12 +10,39 @@
   box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.1), inset 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/// Apply the theme's basic box-shadow and border styles
-@mixin button($color: $cobalt) {
-  border: 1px solid $azure;
+@mixin button($color, $text: light) {
+  @if $text == 'dark' {
+    color: mix($color, black, 40%);
+    box-shadow: inset 0 0 12px rgba(255, 255, 255, 0.66), 0 2px 0 rgba(0, 0, 0, 0.1);
+  } @else { // if Light
+    color: mix($color, white, 20%);
+    box-shadow: inset 0 0 12px rgba(255, 255, 255, 0.66), 0 2px 0 rgba(0, 0, 0, 0.2);
+    &:hover { color: #FFF; }
+  }
+  
+  position: relative;
+  margin-bottom: 2px;
+  padding: 12px 36px;
   background: $color;
+  border: 1px solid mix($color, black, 60%);  
   border-radius: 3px;
-  padding: 6px 8px;
-  color: #FFF;
-  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.25);
+  font-size: 14px;
+  transition: $trans-fast;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+
+  &:hover {
+    box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.75), 0 2px 0 rgba(0, 0, 0, 0.2);
+  }
+
+  &:active {
+    margin-top: 2px;
+    margin-bottom: 0;
+    box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.85);
+    outline: none;
+  }
+
+  &:focus {
+    outline: none;
+  }
 }
