--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -9,17 +9,18 @@
   color: #FFF;
   border: 1px solid $cobalt;
   border-radius: 3px;
-  box-shadow: inset 0 0 12px rgba(255, 255, 255, 0.66), 0 2px 0 rgba(0, 0, 0, 0.33);
-  transition: $trans-med;
+  box-shadow: inset 0 0 12px rgba(255, 255, 255, 0.66), 0 2px 0 rgba(0, 0, 0, 0.2);
+  transition: $trans-fast;
 
   &:hover {
-    box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.75), 0 2px 0 rgba(0, 0, 0, 0.33);
+    box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.75), 0 2px 0 rgba(0, 0, 0, 0.2);
   }
 
   &:focus,
   &:active {
     position: relative;
     margin-top: 2px;
+    margin-bottom: -2px;
     box-shadow: inset 0 0 1px rgba(255, 255, 255, 0.85);
     outline: none;
   }
