--- a/assets/sass/components/_dropbutton.scss
+++ b/assets/sass/components/_dropbutton.scss
@@ -11,7 +11,7 @@
 .js .dropbutton-wrapper {
 
   .dropbutton-widget {
-    @include button();
+    @include button($blue);
 
     ul.dropbutton a,
     button[type=button] {
