--- a/assets/sass/components/_forms.scss
+++ b/assets/sass/components/_forms.scss
@@ -156,6 +156,12 @@
 
 } // // // // // // // // // // // // // Form Item: .form-item
 
+.form-actions {
+  padding: 24px 0 24px 0;
+  display: flex;
+  align-items: flex-start;
+} // // // // // // // // // // // // // Form Actions
+
 .form-wrapper {
   summary {
     font-weight: bold;
